<resources>
    <string name="app_name">ContatosPdm</string>
    <string name="contact_list">Lista de contatos</string>
    <string name="add_contact">Adicionar contato</string>
    <string name="name">Nome</string>
    <string name="address">Endereço</string>
    <string name="phone">Telefone</string>
    <string name="email">Email</string>
    <string name="save">Salvar</string>
    <string name="contact_info">Informações do contato</string>
    <string name="remove_contact">Remover contato</string>
    <string name="edit_contact">Editar contato</string>
    <string name="refresh_contacts">Atualizar lista de contatos</string>
</resources>